[tool.poetry]
name = "future-python"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["chemacortes <devxtrem@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/chemacortes/future-python"
repository = "https://github.com/chemacortes/future-python"
keywords = ["hypermodern", "future-python"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"
pytest = "^5.4.3"
coverage = { extras = ["toml"], version = "^5.1" }
pytest-cov = "^2.10.0"
pytest-mock = "^3.1.1"

[tool.poetry.scripts]
future-python = "future_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["future_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
